--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "client",
+  "name": "ToDoAngular.Client",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
@@ -15,20 +15,26 @@
     "@angular/common": "^6.0.2",
     "@angular/compiler": "^6.0.2",
     "@angular/core": "^6.0.2",
-    "@angular/forms": "^6.0.2",
+    "@angular/forms": "^6.0.5",
     "@angular/http": "^6.0.2",
     "@angular/platform-browser": "^6.0.2",
-    "@angular/platform-browser-dynamic": "^6.0.2",
+    "@angular/platform-browser-dynamic": "^6.0.5",
     "@angular/router": "^6.0.2",
+    "@fortawesome/angular-fontawesome": "0.1.0-10",
+    "@fortawesome/fontawesome-svg-core": "^1.2.0",
+    "@fortawesome/free-solid-svg-icons": "^5.1.0",
+    "bootstrap": "^4.1.1",
     "core-js": "^2.5.4",
-    "rxjs": "^6.0.0",
+    "jquery": "^3.3.1",
+    "ngx-bootstrap": "^3.0.0",
+    "popper": "^1.0.1",
+    "rxjs": "^6.2.1",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
-    "@angular/compiler-cli": "^6.0.2",
     "@angular-devkit/build-angular": "~0.6.3",
-    "typescript": "~2.7.2",
     "@angular/cli": "~6.0.3",
+    "@angular/compiler-cli": "^6.0.2",
     "@angular/language-service": "^6.0.2",
     "@types/jasmine": "~2.8.6",
     "@types/jasminewd2": "~2.0.3",
@@ -43,6 +49,9 @@
     "karma-jasmine-html-reporter": "^0.2.2",
     "protractor": "~5.3.0",
     "ts-node": "~5.0.1",
-    "tslint": "~5.9.1"
-  }
+    "tslint": "~5.9.1",
+    "typescript": "~2.7.2"
+  },
+  "main": "main.ts",
+  "license": "MIT"
 }
