--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "core-js": "^2.5.4",
     "jquery": "^3.3.1",
     "ngx-bootstrap": "^3.0.0",
+    "ngx-store": "^2.0.0",
     "popper": "^1.0.1",
     "rxjs": "^6.2.1",
     "zone.js": "^0.8.26"
